Summary of important user-visible changes for version 4.2:
---------------------------------------------------------

 ** Octal ('\NNN') and hex ('\xNN') escape sequences in single quoted
    strings are now interpreted by the function do_string_escapes().
    The *printf family of functions now supports octal and hex escape
    sequences in single-quoted strings for Matlab compatibility.

 ** Special octal and hex escape sequences for the pattern and replacement
    strings in regular expressions are now interpreted for Matlab compatibility.

    octal: '\oNNN' or '\o{NNN}'
    hex  : '\xNN'  or '\x{NN}'

 ** Unknown escape sequences in the replacement string for regexprep are now
    substituted with their unescaped version and no warning is emitted.
    This change was made for Matlab compatibility.

    Example: regexprep ('a', 'a', 'x\yz')
             => 'xyz'

 ** mkfifo now interprets the MODE argument as an octal, not decimal, integer.
    This is consistent with the equivalent shell command. 

 ** linspace now returns an empty matrix if the number of requested points
    is 0 or a negative number.  This change was made to be compatible with
    Matlab releases newer than 2011.  In addition, Octave no longer supports
    matrix inputs for A or B.

 ** The griddata function no longer plots the interpolated mesh if no output
    argument is requested, instead the vector or array of interpolated values
    is always returned for Matlab compatibility.

 ** The surfnorm function now returns unnormalized (magnitude != 1) normal
    vectors for compatibility with Matlab.

 ** Other new functions added in 4.2:

      psi

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.2 and will
    be removed from Octave 4.6 (or whatever version is the second major
    release after 4.2):

      Function             | Replacement
      ---------------------|------------------
      bitmax               | flintmax